2011-01-16  Ben Abbott <bpabbott@mac.com>

	* plot/print.m: For DOS, connect the pipe to ghostscript (bug 31967),
	and redirect to NUL instead of /dev/null.

2011-01-16  John W. Eaton  <jwe@octave.org>

	* gethelp.cc (main): Write function name along with file name in
	comment.

2011-01-16  David Bateman  <dbateman@free.fr>

	* plot/__go_draw_axes__.m: Use "{}" as the default font.

2011-01-15  Rik  <octave@nomad.inbox5.com>

	* scripts/help/doc.m, scripts/help/which.m,
	scripts/miscellaneous/comma.m, scripts/miscellaneous/ls.m,
	scripts/miscellaneous/paren.m, scripts/miscellaneous/semicolon.m,
	scripts/pkg/pkg.m: Eliminate @deffn macros.

2011-01-15  John W. Eaton  <jwe@octave.org>

	* deprecated/krylovb: Move here from linear-algebra.
	* deprecated/module.mk (deprecated_FCN_FILES):
	Include krylovb.m in the list.
	* linear-algebra/module.mk (linear_algebra_FCN_FILES):
	Remove krylovb.m from the list.

2011-01-14  Rik  <octave@nomad.inbox5.com>

	* general/postpad.m, general/prepad.m: Improve docstring.

2011-01-14  Rik  <octave@nomad.inbox5.com>

	* ploynomial/polyaffine.m: Improve docstring.

2011-01-14  Rik  <octave@nomad.inbox5.com>

	* general/interp1.m, general/interp2.m, polynomial/mkpp.m,
	polynomial/pchip.m, polynomial/ppder.m, polynomial/ppint.m,
	polynomial/ppjumps.m, polynomial/ppval.m, polynomial/spline.m,
	polynomial/unmkpp.m: Improve docstrings

2011-01-14  Rik  <octave@nomad.inbox5.com>

	* miscellaneous/flops.m: Delete function which was unimplemented
	in Octave and has been removed from Matlab since version 5.

2011-01-14  Rik  <octave@nomad.inbox5.com>

	* specfun/nthroot.m: Add Seealso references to docstring.
	
2011-01-14  Rik  <octave@nomad.inbox5.com>

	* miscellaneous/module.mk: Remove texas_lotto.m from build system.

2011-01-14  Rik  <octave@nomad.inbox5.com>

	* miscellaneous/texas_lotto.m: Remove Easter Egg function.

2011-01-14  John W. Eaton  <jwe@octave.org>

	* Update copyright notices for 2011.
