@@ -1,5 +1,12 @@
 2011-01-17  John W. Eaton  <jwe@octave.org>
 
+	* ov-usr-fcn.cc (octave_user_function::bind_automatic_vars):
+	Save argument names in hidden variable .argn..
+
+	* variables.cc (F__varval__): New function.
+
+2011-01-17  John W. Eaton  <jwe@octave.org>
+
 	* ov-usr-fcn.cc (bind_automatic_vars): Mark variables created
 	here as automatic.
 
